# courses

./: README.md
algorithms-of-bioinformatics/: .gitignore  README.md
algorithms-of-bioinformatics/cmake/: FindLEMON.cmake
algorithms-of-bioinformatics/include/: graph.h
algorithms-of-bioinformatics/labs/branch_and_bound_median_string/: main.cpp
algorithms-of-bioinformatics/labs/branch_and_bound_search_motif/: main.cpp
algorithms-of-bioinformatics/labs/frequent_words_problem/: CMakeLists.txt  input.txt
algorithms-of-bioinformatics/labs/genome_building/: main.cpp
algorithms-of-bioinformatics/labs/global_alignment/: main.cpp
algorithms-of-bioinformatics/labs/manhattan_tourist/: main.cpp
algorithms-of-bioinformatics/labs/median_string/: main.cpp
algorithms-of-bioinformatics/labs/search_motif/: main.cpp
algorithms-of-bioinformatics/lemon-1.3.1/: CMakeLists.txt
algorithms_of_bioinformatics/: CMakeLists.txt  README.md  build.sh
algorithms_of_bioinformatics/cmake/: gnu.cmake
algorithms_of_bioinformatics/include/: common.h  lemon_graph.h
algorithms_of_bioinformatics/labs/: CMakeLists.txt
algorithms_of_bioinformatics/labs/euler_cycle/: main.cpp
algorithms_of_bioinformatics/labs/euler_path/: CMakeLists.txt  main.cpp
algorithms_of_bioinformatics/labs/exchange_coins/: main.cpp
algorithms_of_bioinformatics/labs/frequent_words_problem/: main.cpp
algorithms_of_bioinformatics/labs/graph_de_bruijn/: main.cpp
algorithms_of_bioinformatics/labs/local_alignment/: main.cpp
algorithms_of_bioinformatics/labs/longest_common_substring/: main.cpp
algorithms_of_bioinformatics/labs/overlap_graph/: main.cpp
algorithms_of_bioinformatics/labs/spectrum_string/: main.cpp
computer-graphics/: .gitignore  README.md
computer-graphics/filters/: README.md
computer-graphics/filters/src/: filters.py  form.py  form.ui  main.py  matrixFilter.py  morphology.py  pointsFilter.py
computer-graphics/openGL/src/: main.py
computer-graphics/raytracing/: CMakeLists.txt
computer-graphics/raytracing/app/: CMakeLists.txt  main.cpp
computer-graphics/raytracing/include/: opengl.h
computer-graphics/raytracing/src/: CMakeLists.txt  scene.cpp  shader.cpp
computer-graphics/shaders/: CMakeLists.txt
computer-graphics/shaders/app/: CMakeLists.txt  main.cpp
computer-graphics/shaders/include/: opengl.h
computer-graphics/shaders/shaders/: fragment.glsl  vertex.glsl
computer-graphics/shaders/src/: CMakeLists.txt  scene.cpp
cubic-spline/: .gitignore  CMakeLists.txt  Readme.md  run.sh
cubic-spline/include/: spline.h  utils.h
cubic-spline/scripts/: spline.py
cubic-spline/src/: CMakeLists.txt  pythonSpline.cxx  spline.cpp
cubic-spline/test/: CMakeLists.txt  main.cpp
cubic-spline/utils/: CMakeLists.txt  utils.c
cuda-labs/: .gitignore  CMakeLists.txt  Readme.md  run.sh
cuda-labs/axpy/: CMakeLists.txt  axpy.h
cuda-labs/axpy/src/: CMakeLists.txt  axpy.c
cuda-labs/axpy/src/gpu/: axpy.cu
cuda-labs/axpy/test/: main.c
cuda-labs/gemm/: gemm.h
cuda-labs/gemm/src/: CMakeLists.txt  gemm.c
cuda-labs/gemm/src/gpu/: CMakeLists.txt  gemm.cl  gemm.cu
cuda-labs/gemm/test/: CMakeLists.txt  main.c
cuda-labs/hello/: CMakeLists.txt  main.cu
cuda-labs/utils/: CMakeLists.txt  utils.c  utils.h  utils_opencl.c  utils_opencl.h
deep_learning/back-propagation/: DNN_MNIST.ipynb
image-processing/: .gitignore  .travis.yml  CMakeLists.txt  README.md
image-processing/modules/: CMakeLists.txt
image-processing/modules/app/: CMakeLists.txt  main.cpp
image-processing/modules/include/: histogram.h  huffman.h  imPr.h  interpolation.h  segmentation.h
image-processing/modules/src/: CMakeLists.txt  histogram.cpp  huffman.cpp  imPr.cpp  interpolation.cpp  segmentation.cpp
laplace-equation/: .gitignore  CMakeLists.txt  README.md
laplace-equation/app/: CMakeLists.txt  main.cpp
laplace-equation/include/: parallel.h  serial.h  solutionTbb.h
laplace-equation/initial/: setting.ini
laplace-equation/result/: 3D.py  fault.py
laplace-equation/src/: CMakeLists.txt  parallel.c  serial.c  solutionTbb.cpp
linear-algebra/: README.md  matrix_factorization.ipynb  svd.ipynb
machine-learning/: README.md
machine-learning/dataset/: data_test.csv  data_train.csv  label_test.csv  label_train.csv  segmentation_train.data
nolinear-dynamic/: README.md
nolinear-dynamic/labs/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  to_pdf.py
parallel-numerical-methods/: CMakeLists.txt  README.md  build.sh
parallel-numerical-methods/cmake/: TestSolution.cmake
parallel-numerical-methods/labs/: CMakeLists.txt
parallel-numerical-methods/labs/bicg/: CMakeLists.txt  bicg.h  main.cpp  test.cpp
parallel-numerical-methods/labs/cholesky_factorization/: CMakeLists.txt  check_postive_define_matrix.py  cholesky.h  main.cpp  test.cpp
parallel-numerical-methods/labs/conjgrad/: CMakeLists.txt  config_threads.hpp  conjgrad.h  main.cpp  test.cpp
parallel-numerical-methods/labs/mpi_conjgrad/: CMakeLists.txt  conjgrad.h  main.cpp  test.cpp
parallel-numerical-methods/labs/runge_kutta/: CMakeLists.txt  main.cpp  runge-kutta.h  runge-kutta_impl.i  test.cpp
parallel-numerical-methods/util/: config_threads.hpp  util.h
performance-analysis/: CMakeLists.txt  build.sh
performance-analysis/cmake/: BuildFlags.cmake  FindAVX.cmake
performance-analysis/source/: CMakeLists.txt  main.c  perf_v1.c  perf_v2.c  perf_v3.c  utils.h
return-your-debts/: README.md
return-your-debts/www/: admin.php  config.php  home.php  index.php  logout.php  registry.php  session.php
stochastic-differential-equations/: .gitignore  CMakeLists.txt  README.md
stochastic-differential-equations/cmake/: FindCatch.cmake  FindMKL.cmake
stochastic-differential-equations/sde/: CMakeLists.txt  sde.hpp
stochastic-differential-equations/sde/app/: CMakeLists.txt  main.cpp
stochastic-differential-equations/sde/experiments/: experiments.ipynb  experiments.py
stochastic-differential-equations/sde/lib/: CMakeLists.txt  sde_python.cpp
stochastic-differential-equations/util/: util.hpp
(+15 files in other folders)
